# XGCN_library

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  readme.md  requirements.txt  requirements.xgcn.yaml  setup.py
XGCN/: __init__.py
case_study/: calc_hop.py  emb_simple_stat.py  get_emb_top_reco.py  get_ppr_top_reco.py  plot_density.py  top_reco_indegree.py
config/: ClusterGCN-config.yaml  ELPH-config.yaml  GAMLP-config.yaml  GAMLP_learnable_emb-config.yaml  GAMLP_learnable_emb.yaml  GAT-config.yaml  GAT-full_graph-config.yaml  GBP-config.yaml  GIN-config.yaml  GIN-full_graph-config.yaml  GensimNode2vec-config.yaml  GraphSAGE-config.yaml  GraphSAGE-full_graph-config.yaml  ItemCF-config.yaml  LightGCN-block-config.yaml  LightGCN-config.yaml  LightGCN-full_graph-config.yaml  LightGCN-full_graph-dev-config.yaml  NeighborBased-config.yaml  Node2vec-config.yaml  PPR-config.yaml  PPRGo-config.yaml  RandNE-config.yaml  SGC-config.yaml  SGC_learnable_emb-config.yaml  SIGN-config.yaml  SIGN_learnable_emb-config.yaml  SSGC-config.yaml  SSGC_learnable_emb-config.yaml  SimpleX-config.yaml  UltraGCN-config.yaml  block_simplex-config.yaml  gamlp-config.yaml  gat-config.yaml  gbp-config.yaml  gin-config.yaml  graphsage-config.yaml  lightgcn-config.yaml  node2vec-config.yaml  ppr-config.yaml  (+12 more)
data/: add_sampled_neg_for_pos_edges.py  convert_edgeList_2_adj.py  csr_graph_helper.py  handle_adj_eval_set.py  handle_adj_graph_txt.py  handle_edge_list_txt.py  handle_labelled_eval_set.py  handle_src_pos_neg_eval_set.py  handle_train_graph.py  (+3 more)
(+734 files in other folders)
