# pyproject.toml

[tool.setuptools]
packages = ["gnn_zoo"]

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hust-gnn_zoo"
version = "0.0.0"
description = "test..."
# readme = ""
authors = [{ name = "Xiran Song", email = "xiransong@hust.edu.cn" }]
# license = { file = "LICENSE" }
# classifiers = [
#     "License :: OSI Approved :: MIT License",
#     "Programming Language :: Python",
#     "Programming Language :: Python :: 3",
# ]
# keywords = ["gnn",]
requires-python = ">=3.8"
dependencies = [
    "dgl >= 0.9.1",
    "gensim >= 4.2.0",
    "numba >= 0.55.1",
    "numpy >= 1.21.5",
    "PyYAML >= 6.0",
    "torch >= 1.9.0",
    "torch_geometric >= 2.0.4",
    "tqdm >= 4.63.0",
]

# [project.optional-dependencies]
# dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

# [project.urls]
# Homepage = "https://github.com/realpython/reader"

# [project.scripts]
# realpython = "reader.__main__:main"
